--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,46 +8,45 @@
     <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
   </head>
   <body>
-    <main style="max-width: 900px; margin: 0 auto; padding: 20px">
-      <!-- Logo do Produto -->
-      <section style="text-align: center; padding: 20px">
-        <img
-          src="{{ .Site.Params.logo | relURL }}"
-          alt="Logo do Produto"
-          style="max-width: 200px"
-        />
+    <main>
+      <!-- Logo do Produto com Link à Direita -->
+      <section class="logo-section">
+        <img src="{{ .Site.Params.logo | relURL }}" alt="Logo do Produto" />
+        <a href="{{ .Site.Params.cta_link }}" class="header-link"
+          >Comprar Agora</a
+        >
       </section>
 
-      <!-- Banner do Produto ou Criador -->
-      <section style="text-align: center; padding: 20px">
-        <img
-          src="{{ .Site.Params.banner | relURL }}"
-          alt="Banner do Produto"
-          style="max-width: 300px"
-        />
-      </section>
+      <!-- Wrapper para Banner e Conteúdo -->
+      <div class="banner-content-wrapper">
+        <!-- Banner do Produto ou Criador -->
+        <section class="banner-section">
+          <img
+            src="{{ .Site.Params.banner | relURL }}"
+            alt="Banner do Produto"
+          />
+        </section>
 
-      <!-- Título e CTA -->
-      <section style="text-align: center; margin: 20px 0">
-        <h1 style="color: #d1a84e; font-size: 2.2rem; margin-bottom: 10px">
-          {{ .Site.Params.titulo }}
-        </h1>
-        <p style="color: #e0e0e0; font-size: 1.2rem">
-          {{ .Site.Params.subtitulo }}
-        </p>
-      </section>
+        <!-- Conteúdo Lateral (Título, Subtítulo, Disclaimer e CTA) -->
+        <section class="content-section">
+          <div class="cta-section">
+            <h1 class="titulo">{{ .Site.Params.titulo }}</h1>
+            <h2 class="subtitulo">{{ .Site.Params.subtitulo }}</h2>
+          </div>
 
-      <!-- Disclaimer -->
-      <section style="text-align: center; margin: 20px 0">
-        {{ range .Site.Params.disclaimer }}
-        <p style="color: #ff4c4c; font-size: 1.1rem; margin: 5px 0">{{ . }}</p>
-        {{ end }}
-      </section>
+          <div class="disclaimer-section">
+            {{ range .Site.Params.disclaimer }}
+            <p class="disclaimer">{{ . }}</p>
+            {{ end }}
+          </div>
 
-      <!-- Botão CTA -->
-      <section style="text-align: center; margin-top: 30px">
-        <a href="{{ .Site.Params.cta_link }}"> {{ .Site.Params.cta_texto }} </a>
-      </section>
+          <div class="button-section">
+            <a href="{{ .Site.Params.cta_link }}" class="cta-button"
+              >{{ .Site.Params.cta_texto }}</a
+            >
+          </div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
