final cosmetic updates

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,8 @@
     <title>{{ .Site.Title }}</title>
     <meta name="description" content="{{ .Site.Params.subtitulo }}" />
     <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
+    <!-- Link to the Favicon -->
+  <link rel="icon" href="{{ "favicon.png" | relURL }}" type="image/x-icon" />
   </head>
   <body>
     <main>
